4. ThreadSafe динамический список